test/functions/ferguson/generic-default-nil.good
generic-default-nil.chpl:7: error: cannot initialize borrowed C from nil
generic-default-nil.chpl:3: note: when calling foo with a default value for x
generic-default-nil.chpl:3: In function 'foo':
generic-default-nil.chpl:3: error: cannot default-initialize a variable with generic type
generic-default-nil.chpl:3: note: 'x' has generic type 'borrowed C'
generic-default-nil.chpl:3: note: cannot find initialization point to split-init this variable
generic-default-nil.chpl:4: note: 'x' is used here before it is initialized
  generic-default-nil.chpl:7: called as foo(x: borrowed C)
